feat: fix classroom

--- a/src/main/resources/templates/pages/classroom/people.html
+++ b/src/main/resources/templates/pages/classroom/people.html
@@ -13,24 +13,7 @@
     <!--/ Header -->
 
     <!-- Navbar pills -->
-    <div class="row mb-3">
-        <div class="col-md-12">
-            <ul class="nav nav-pills flex-column flex-sm-row mb-4">
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{~/classroom/pages/stream}"><i class="ti-xs ti ti-user-check me-1"></i> Steam</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" id="btn-page-course"  th:href="@{~/classroom/pages/course}"><i class="ti-xs ti ti-layout-grid me-1"></i> Classwork</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active" id="btn-people"  th:href="@{~/classroom/people}"><i class=" ti-xs ti ti-users me-1"></i> People</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" id="btn-page-grade" th:href="@{~/classroom/grades}"><i class="ti-xs ti ti-link me-1"></i> Grades</a>
-                </li>
-            </ul>
-        </div>
-    </div>
+    <div class="row" th:replace="~{fragments/classroom-detail-nav:: classroomDetailNav}"></div>
     <!--/ Navbar pills -->
 
     <div class="card mb-5">
