--- a/src/main/resources/templates/pages/classroom/detail.html
+++ b/src/main/resources/templates/pages/classroom/detail.html
@@ -19,65 +19,7 @@
     <!--/ Header -->
 
     <!-- Navbar pills -->
-    <div class="row">
-        <div class="col-md-12">
-            <ul class="nav nav-pills flex-column flex-sm-row mb-4">
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{~/classroom/pages/stream}"><i class="ti-xs ti ti-user-check me-1"></i> Steam</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" id="btn-page-course"  th:href="@{~/classroom/pages/course}"><i class="ti-xs ti ti-layout-grid me-1"></i> Classwork</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" id="btn-people"  th:href="@{~/classroom/{id}/people(id=${course.id})}"><i class="ti-xs ti ti-users me-1"></i> People</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" id="btn-page-grade" th:href="@{~/classroom/grades}"><i class="ti-xs ti ti-link me-1"></i> Grades</a>
-                </li>
-                <li class="nav-item">
-                    <!-- Button New -->
-                    <div class="btn-group" id="dropdown-icon">
-                        <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                            <i class="ti ti-plus"></i> &nbsp; Create
-                        </button>
-                        <ul class="dropdown-menu">
-                            <li>
-                                <a th:href="@{~/classroom/add/assignment}" class="dropdown-item d-flex align-content-lg-between">
-                                    <i class="fa-regular fa-clipboard"></i> &nbsp; Assignment
-                                </a>
-                            </li>
-                            <li>
-                                <a th:href="@{~/classroom/add/quiz/assignment}" class="dropdown-item d-flex align-items-center">
-                                    <i class="fa-solid fa-clipboard"></i> &nbsp; Quiz Assignment
-                                </a>
-                            </li>
-                            <li>
-                                <a th:href="@{~/classroom/add/quiz}" class="dropdown-item d-flex align-items-center">
-                                    <i class="fa-solid fa-clipboard-question"></i> &nbsp; Quiz
-                                </a>
-                            </li>
-                            <li>
-                                <a th:href="@{~/classroom/add/material}" id="btn-add-material" class="dropdown-item d-flex align-items-center">
-                                    <i class="fa-solid fa-book-bookmark"></i> &nbsp; Material
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#" class="dropdown-item d-flex align-items-center">
-                                    <i class="fa-solid fa-repeat"></i> &nbsp; Reuse Post
-                                </a>
-                            </li>
-                            <li>
-                                <a id="btn-topic-add" th:href="@{~/classroom/{id}/topic/add(id=${course.id})}" class="dropdown-item d-flex align-items-center">
-                                    <i class="fa-solid fa-table-list"></i> &nbsp; Topic
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                    <!--/ Button New -->
-                </li>
-            </ul>
-        </div>
-    </div>
+    <div class="row" th:replace="~{fragments/classroom-detail-nav:: classroomDetailNav}"></div>
     <!--/ Navbar pills -->
 
     <div class="row g-4">
