--- a/src/main/resources/templates/fragments/classroom-detail-nav.html
+++ b/src/main/resources/templates/fragments/classroom-detail-nav.html
@@ -6,13 +6,13 @@
                 <a class="nav-link" th:href="@{~/classroom/pages/stream}"><i class="ti-xs ti ti-user-check me-1"></i> Steam</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" id="btn-page-course"  th:href="@{~/classroom/{id}/work(id=${course.id})}"><i class="ti-xs ti ti-layout-grid me-1"></i> Classwork</a>
+                <a class="nav-link" id="btn-page-course"  th:href="@{~/classroom/{id}/work(id=${courseId})}"><i class="ti-xs ti ti-layout-grid me-1"></i> Classwork</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" id="btn-people"  th:href="@{~/classroom/{id}/people(id=${course.id})}"><i class="ti-xs ti ti-users me-1"></i> People</a>
+                <a class="nav-link" id="btn-people"  th:href="@{~/classroom/{id}/people(id=${courseId})}"><i class="ti-xs ti ti-users me-1"></i> People</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" id="btn-page-grade" th:href="@{~/classroom/{id}/grade(id=${course.id})}"><i class="ti-xs ti ti-link me-1"></i> Grades</a>
+                <a class="nav-link" id="btn-page-grade" th:href="@{~/classroom/{id}/grade(id=${courseId})}"><i class="ti-xs ti ti-link me-1"></i> Grades</a>
             </li>
             <li class="nav-item">
                 <!-- Button New -->
@@ -47,7 +47,7 @@
                             </a>
                         </li>
                         <li>
-                            <a id="btn-topic-add" th:href="@{~/classroom/{id}/topic/add(id=${course.id})}" class="dropdown-item d-flex align-items-center">
+                            <a id="btn-topic-add" th:href="@{~/classroom/{id}/topic/add(id=${courseId})}" class="dropdown-item d-flex align-items-center">
                                 <i class="fa-solid fa-table-list"></i> &nbsp; Topic
                             </a>
                         </li>
